# splendor-gym

./: .gitignore  COLAB_QUICKSTART.md  FIXES_SUMMARY.md  README.md  README_COLAB.md  SPLENDOR_ALPHAZERO_README.md  Splendor cards list.csv  colab_compatibility_fix.py  colab_setup.py  colab_training.py  commands.txt  debug_collection_hang.py  debug_config_environment.py  debug_episode_completion.py  diagnose_colab_buffer.py  enhanced_splendor_env.py  eval_splendor_alphazero.py  fix_colab_buffer_issues.py  fix_colab_ctree.py  fix_ctree_imports.py  fix_python312_compatibility.py  fix_training_issues.py  nobleStrategy.js  ppo_splendor.py  ppo_splendor_enhanced.py  pyproject.toml  pytest.ini  simple_training_fix.py  simplified_take3_demo.py  test_colab_minimal_training.py  test_training_with_timeout.py  train_splendor_alphazero.py  train_splendor_colab.py  train_splendor_working.py  training_utils.py
data_az_ctree/colab_test_seed0/: formatted_total_config.py  git_diff.txt  git_log.txt  total_config.py
data_az_ctree/debug_test_seed0/: formatted_total_config.py  git_diff.txt  git_log.txt  total_config.py
data_az_ctree/debug_test_seed0_250825_210958/: formatted_total_config.py  total_config.py
data_az_ctree/debug_test_seed0_250825_211028/: formatted_total_config.py  total_config.py
data_az_ctree/debug_test_seed0_250825_211055/: formatted_total_config.py  total_config.py
data_az_ctree/debug_test_seed0_250825_211142/: formatted_total_config.py  total_config.py
runs/: ppo_splendor.pt  ppo_splendor_best.pt
splendor_gym/: __init__.py
splendor_gym/docs/: splendor_env.md
(+124 files in other folders)
