[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splendor-gym"
version = "0.1.0"
description = "Gymnasium-compatible Splendor environment for RL research"
authors = [
  { name = "Splendor Gym" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=0.29.1",
  "numpy>=1.24.0",
  "typing-extensions>=4.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.4.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["splendor_gym*"]

[tool.ruff]
line-length = 100 